# small-gemm

./: Cargo.toml  build.rs  eigen.cpp
benches/: bench.rs
src/: lib.rs
